testdata/baselines/reference/submodule/conformance/commonJSImportExportedClassExpression.errors.txt
main.js(1,15): error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
main.js(3,12): error TS7006: Parameter 'k' implicitly has an 'any' type.
mod1.js(1,1): error TS2304: Cannot find name 'exports'.


==== main.js (2 errors) ====
    const { K } = require("./mod1");
                  ~~~~~~~
!!! error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    /** @param {K} k */
    function f(k) {
               ~
!!! error TS7006: Parameter 'k' implicitly has an 'any' type.
        k.values()
    }
    
==== mod1.js (1 errors) ====
    exports.K = class K {
    ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
        values() {
        }
    };
    